--- a/.travis.yml
+++ b/.travis.yml
@@ -1,73 +1,128 @@
 ---
-os: linux
 language: cpp
 dist: xenial
-compiler:
-    - clang
-    - gcc
-env:
-    - LIBRARY_COMBO=gnu-gnu-gnu
-    - LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-1.9
-    - LIBRARY_COMBO=ng-gnu-gnu BASE_ABI=--disable-mixedabi RUNTIME_VERSION=gnustep-1.9
-    - LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-2.0
-    - LIBRARY_COMBO=ng-gnu-gnu BASE_ABI=--disable-mixedabi RUNTIME_VERSION=gnustep-2.0
 jobs:
-    exclude:
-        - compiler: gcc
-          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-1.9
-        - compiler: gcc
-          env: LIBRARY_COMBO=ng-gnu-gnu BASE_ABI=--disable-mixedabi RUNTIME_VERSION=gnustep-1.9
-        - compiler: gcc
-          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-2.0
-        - compiler: gcc
-          env: LIBRARY_COMBO=ng-gnu-gnu BASE_ABI=--disable-mixedabi RUNTIME_VERSION=gnustep-2.0
-        - compiler: clang
+    include:
+        - name: "Linux GCC"
+          os: linux
+          compiler: gcc
           env: LIBRARY_COMBO=gnu-gnu-gnu
-before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y cmake pkg-config libgnutls28-dev libgmp-dev libffi-dev libicu-dev libxml2-dev libxslt1-dev libssl-dev libavahi-client-dev zlib1g-dev
-    - >
-        if [ $LIBRARY_COMBO = 'gnu-gnu-gnu' ];
-        then
-          if [ $CC = 'gcc' ];
-          then
-            sudo apt-get install -y gobjc;
-          fi;
-          sudo apt-get install -y libobjc-4.8-dev libblocksruntime-dev;
-        else
-          curl -s -o - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -;
-          sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main" && sudo apt-get update -qq;
-          sudo apt-get install -y clang-9 libkqueue-dev libpthread-workqueue-dev;
-          sudo update-alternatives   --install /usr/bin/clang   clang   /usr/bin/clang-9   10 \
-                                     --slave   /usr/bin/clang++ clang++ /usr/bin/clang++-9;
-          export PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/clang-7.0.0\/bin//');
-          if [ "$RUNTIME_VERSION" = "gnustep-2.0" ];
-          then
-             sudo update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" 10;
-          fi;
-        fi;
-    # libdispatch requires a fairly recent version of cmake
-    - >
-        if [ $LIBRARY_COMBO = 'ng-gnu-gnu' ];
-        then
-          curl -LO https://cmake.org/files/v3.15/cmake-3.15.5-Linux-x86_64.tar.gz;
-          tar xf cmake-3.15.5-Linux-x86_64.tar.gz;
-          mv cmake-3.15.5-Linux-x86_64 $HOME/cmake;
-          export PATH=$HOME/cmake/:$HOME/cmake/bin:$PATH
-        fi;
-install: ./travis-deps.sh
-before_script: >
-    export LIBRARY_PATH=$HOME/staging/lib:$HOME/staging/lib64:$LIBRARY_PATH;
-    export LD_LIBRARY_PATH=$HOME/staging/lib:$HOME/staging/lib64:$LD_LIBRARY_PATH;
-    if [ $LIBRARY_COMBO = 'ng-gnu-gnu' ];
-    then
-      export CPATH=$HOME/staging/include;
-    else
-      export CPATH=/usr/lib/gcc/x86_64-linux-gnu/4.8/include;
-    fi;
-    export PATH=$HOME/staging/bin:$PATH;
-    export GNUSTEP_MAKEFILES=$HOME/staging/share/GNUstep/Makefiles;
-    . $HOME/staging/share/GNUstep/Makefiles/GNUstep.sh;
-script: >
-    ./configure $BASE_ABI || (cat config.log && false);
-    make && make install && make check || (cat Tests/tests.log && false);
+        - name: "Linux Clang gnustep-1.9"
+          os: linux
+          compiler: clang
+          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-1.9
+        - name: "Linux Clang gnustep-1.9 disable-mixedabi"
+          os: linux
+          compiler: clang
+          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-1.9 BASE_ABI=--disable-mixedabi
+        - name: "Linux Clang gnustep-2.0"
+          os: linux
+          compiler: clang
+          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-2.0
+        - name: "Linux Clang gnustep-2.0 disable-mixedabi"
+          os: linux
+          compiler: clang
+          env: LIBRARY_COMBO=ng-gnu-gnu RUNTIME_VERSION=gnustep-2.0 BASE_ABI=--disable-mixedabi
+        - name: "Windows GCC"
+          os: windows
+          env: LIBRARY_COMBO=gnu-gnu-gnu
+    # allow Windows builds to fail (remove once all tests are passing on Windows)
+    allow_failures:
+        - os: windows
+before_install: |
+    case $TRAVIS_OS_NAME in
+    linux)
+        sudo apt-get -qq update
+        sudo apt-get install -y cmake pkg-config libgnutls28-dev libgmp-dev libffi-dev libicu-dev libxml2-dev libxslt1-dev libssl-dev libavahi-client-dev zlib1g-dev
+        case $LIBRARY_COMBO in
+        gnu-gnu-gnu)
+            if [ $CC = 'gcc' ]; then
+                sudo apt-get install -y gobjc
+            fi
+            sudo apt-get install -y libobjc-4.8-dev libblocksruntime-dev
+            ;;
+        ng-gnu-gnu)
+            curl -s -o - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
+            sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main" && sudo apt-get update -qq
+            sudo apt-get install -y clang-9 libkqueue-dev libpthread-workqueue-dev
+            sudo update-alternatives   --install /usr/bin/clang   clang   /usr/bin/clang-9   10 \
+                                       --slave   /usr/bin/clang++ clang++ /usr/bin/clang++-9
+            export PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/clang-7.0.0\/bin//')
+            if [ "$RUNTIME_VERSION" = "gnustep-2.0" ]; then
+               sudo update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" 10
+            fi;
+            ## libdispatch requires a fairly recent version of cmake
+            curl -LO https://cmake.org/files/v3.15/cmake-3.15.5-Linux-x86_64.tar.gz
+            tar xf cmake-3.15.5-Linux-x86_64.tar.gz
+            mv cmake-3.15.5-Linux-x86_64 $HOME/cmake
+            export PATH=$HOME/cmake/:$HOME/cmake/bin:$PATH
+            ;;
+        esac
+        ;;
+    windows)
+        ## from https://docs.travis-ci.com/user/reference/windows/#how-do-i-use-msys2
+        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
+        choco uninstall -y mingw
+        choco upgrade --no-progress -y msys2
+        export msys2='cmd //C RefreshEnv.cmd '
+        export msys2+='& set MSYS=winsymlinks:nativestrict '
+        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
+        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
+        export msys2+=" -msys2 -c "\"\$@"\" --"
+        ## Install MSYS2 packages required by GNUstep
+        $msys2 pacman --sync --noconfirm --needed \
+            mingw-w64-x86_64-gcc-objc \
+            make \
+            pkg-config \
+            libxml2-devel \
+            libxslt-devel \
+            libffi-devel \
+            libgnutls-devel \
+            icu-devel \
+            mingw-w64-x86_64-pkg-config \
+            mingw-w64-x86_64-libxml2 \
+            mingw-w64-x86_64-libxslt \
+            mingw-w64-x86_64-libffi \
+            mingw-w64-x86_64-gnutls \
+            mingw-w64-x86_64-icu \
+        ##
+        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
+        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export MAKE=mingw32-make  # so that Autotools can find it
+        ;;
+    esac
+install: $mingw64 ./travis-deps.sh
+before_script: |
+    DEP_ROOT=$HOME/staging
+    export LIBRARY_PATH=$DEP_ROOT/lib:$DEP_ROOT/lib64:$LIBRARY_PATH
+    export LD_LIBRARY_PATH=$DEP_ROOT/lib:$DEP_ROOT/lib64:$LD_LIBRARY_PATH
+    case $LIBRARY_COMBO in
+    gnu-gnu-gnu)
+        export CPATH=/usr/lib/gcc/x86_64-linux-gnu/4.8/include
+        ;;
+    ng-gnu-gnu)
+        export CPATH=$DEP_ROOT/include
+        ;;
+    esac
+    export PATH=$DEP_ROOT/bin:$PATH
+    export GNUSTEP_MAKEFILES=$DEP_ROOT/share/GNUstep/Makefiles
+    . $GNUSTEP_MAKEFILES/GNUstep.sh
+script:
+    - $mingw64 env
+    - $mingw64 gnustep-config --objc-flags
+    - $mingw64 gnustep-tests --help
+    - $mingw64 ./configure $BASE_ABI || (cat config.log && false)
+    - $mingw64 make && make install && make check || (cat Tests/tests.log && false)
+
+# set up packages cache (currently used on Windows only)
+before_cache: |
+    case $TRAVIS_OS_NAME in
+    windows)
+        # https://unix.stackexchange.com/a/137322/107554
+        $msys2 pacman --sync --clean --noconfirm
+        ;;
+    esac
+cache:
+    directories:
+        - $HOME/AppData/Local/Temp/chocolatey
+        - /C/tools/msys64
